--- a/src/styles/components/ImagesList.module.css
+++ b/src/styles/components/ImagesList.module.css
@@ -1,9 +1,10 @@
 .wrapper{
+    width: 300px;
     margin-bottom: 20px;
 }
 
 .wrapper img{
-	display: inline-block;
     width: 100%;
-	height: auto;
+	height: 100%;
+    object-fit: cover;
 }
