--- a/src/styles/pages/Main.module.css
+++ b/src/styles/pages/Main.module.css
@@ -1,15 +1,17 @@
 .wrapper{
     width: 100%;
     background-color: rebeccapurple;
-
+    padding-bottom: 50px;
 }
 
 .images-box{
     width: 100%;
     height: auto;
 
-    column-count: 3;
-    column-gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-rows: 200px;
+    gap: 10px;
 }
 
 
