--- a/src/styles/layouts/NavBar.module.css
+++ b/src/styles/layouts/NavBar.module.css
@@ -1,15 +1,37 @@
 .wrapper{
     width: 100%;
     height: 80px;
-    padding-right: 20px;
-    background-color: lightpink;
+    background-color: rgba(114, 69, 48, 0.753);
 
-    display: flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-columns: calc(50% + 74px + 7px) 1fr;
     align-items: center;
-    column-gap: 20px;
+    justify-items: end;
 }
     .wrapper a{
         font-size: 20px;
     }
 
+
+    .search-box input{
+        width: 150px;
+        height: auto;
+        padding: 7px 14px;
+
+        outline: none;
+        border: 1px solid transparent;
+        border-radius: 8px;
+        background-color: rgba(255, 255, 255, 0.603);
+    }
+    .search-box input:hover, 
+    .search-box input:focus{
+        border: 1px solid rgb(0, 0, 0);
+        background-color: rgb(255, 255, 255);
+    }
+
+.link-box{
+    padding-right: 20px;
+
+    display: flex;
+    column-gap: 20px;
+}
