--- a/src/styles/pages/Main.module.css
+++ b/src/styles/pages/Main.module.css
@@ -1,12 +1,12 @@
 .wrapper{
     width: 100%;
-    background-color: rebeccapurple;
     padding-bottom: 50px;
 }
 
 
 .images-box{
     width: 100%;
+    padding: 15px 10px;
     height: auto;
 
     display: grid;
