--- a/src/styles/components/ImagesList.module.css
+++ b/src/styles/components/ImagesList.module.css
@@ -1,14 +1,20 @@
 .wrapper{
-    margin-bottom: 20px;
     cursor: pointer;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 1px solid transparent;
+    overflow: hidden;
 }
-
+    .wrapper:hover{
+        box-shadow: 0 0 10px rgba(223, 219, 219, 0.301);
+    }
 
 .list-image{
     width: 100%;
 	height: 100%;
     object-fit: cover;
 }
+
 
 .modal-box{
     position: fixed;
