--- a/src/styles/layouts/NavBar.module.css
+++ b/src/styles/layouts/NavBar.module.css
@@ -1,7 +1,9 @@
 .wrapper{
     width:100%;
     height: 80px;
-    background-color: rgba(114, 69, 48, 0.753);
+    background: rgb(0,40,30);
+    background: linear-gradient(135deg, rgba(0,40,30,1) 0%, rgba(0,0,0,1) 100%);
+    
 
     display: grid;
     grid-template-columns: calc(50% + 74px + 7px) 1fr;
@@ -9,7 +11,9 @@
     justify-items: end;
 }
     .wrapper a{
+        padding-bottom: 5px;
         font-size: 20px;
+        color: rgb(255, 255, 255);
     }
 
 
